--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ window.game = new CatchTheCatGame({
 	backgroundColor: 16777215,
 	parent: "catch-the-cat",
 	statusBarAlign: "center",
-	credit: "圈小猫"
+	credit: "圈小猫（杨俊熙专属，张亦卓开发🤪）"
 })
 </script> 
 
